service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudnotes-service
spec:
  selector:
    app: cloudnotes
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
